change on locationcontroller